--- a/package.json
+++ b/package.json
@@ -12,9 +12,9 @@
     "date-fns": "2.21.3",
     "gray-matter": "4.0.3",
     "next": "latest",
-    "react": "^17.0.2",
+    "react": "18",
     "react-cookie": "^4.1.1",
-    "react-dom": "^17.0.2",
+    "react-dom": "18",
     "remark": "13.0.0",
     "remark-html": "13.0.1",
     "typescript": "^4.2.4"
@@ -22,8 +22,8 @@
   "devDependencies": {
     "@types/jest": "^26.0.23",
     "@types/node": "^15.6.0",
-    "@types/react": "^17.0.6",
-    "@types/react-dom": "^17.0.5",
+    "@types/react": "18",
+    "@types/react-dom": "18",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "autoprefixer": "^10.2.5",
